# git-flow-boilerplate

./: .gitignore  CONTRIBUTING.md  CURSOR.MD  LICENSE  README.md  setup.sh
.claude/: CURSOR.MD  DEVELOPMENT-DEPLOYMENT-FLOW.md  LOCAL-VS-REMOTE-DEPLOYMENT.md  MCP-INTEGRATION.md  REMOTE-INSTALLATION-SYSTEM.md  TASK-MANAGEMENT.md  TODO.md  base-settings-template.local.json  create_git_documentation.sh  install_claude_instructions.sh
.claude/.claude/: DEVELOPMENT-WORKFLOW.md  README-LOCAL-MCP-SERVER.md  REMOTE-DEPLOYMENT-WORKFLOW.md  SAFETY-CHECKS.md  TODO.md  base-local-installation-template-settings.local.json  install_claude_instructions.sh  settings.local.json
.claude/.claude/.claude/: .gitignore  GITFLOW_DOCUMENTATION_GUIDE.md  LOCAL-VS-REMOTE-DEPLOYMENT.md  base-settings.local.json
.claude/.claude/docs/: GITHUB-PROJECTS-INTEGRATION.md  install-advanced-doc-tools.sh  (+3 more)
.claude/scripts/: install_ai_tools.sh
.claude/templates/: DEVELOPMENT-WORKFLOW.md  REMOTE-INSTALL-GUIDE-TEMPLATE.md  SOFTWARE-INSTALL-INSTRUCTIONS-TEMPLATE.md  TODO.md
.github/workflows/: ci.yml  pages.yml
docs/: Gemfile  _config.yml  getting-started.md  index.html  index.md
docs/api/: index.md
docs/examples/: index.md
docs/languages/: index.md
docs/workflows/: index.md
examples/bash/: hello.sh  server.sh  test_hello.sh
examples/nodejs/: hello.js  hello.test.js  package.json  server.js
examples/python/: hello.py  requirements.txt  server.py  test_hello.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs  server.rs
scripts/: build-all.sh  generate-docs.sh  run-tests.sh
(+5 files in other folders)
