[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
authors = ["Development Team <dev@example.com>"]
description = "Hello World example in Rust"
license = "MIT"
repository = "https://github.com/your-username/git-flow-boilerplate"
documentation = "https://your-username.github.io/git-flow-boilerplate"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "hello"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"